All Tests Pass!
That's not to say there aren't edge cases but it should at least now
compile and run.

Need to validate it against the existing UI